# Sci-Lisp-Sandbox

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml
design/: error_message.md  example.sl  example.slisp  memo.md  type_system.dot  usecase.slisp
hikae/core/: lib.rs
hikae/core/rust/types/: array.rs  bool.rs  c64.rs  collection.rs  datetime.rs  enum.rs  generator.rs  iterable.rs  list.rs  map.rs  nil.rs  regex.rs  set.rs  slice.rs  string.rs
src/: README.md  cli.rs  main.rs  parser.rs  structures.rs
src/cli/: execute.rs  repl.rs
src/core/: Cargo.toml  lib.rs
src/core/rust/: types.rs
src/core/rust/types/: any.rs  array.rs  bool.rs  c64.rs  collection.rs  datetime.rs  enum.rs  evaluable.rs  f64.rs  function.rs  i64.rs  iterable.rs  keyword.rs  list.rs  map.rs  map_key.rs  nil.rs  number.rs  regex.rs  set.rs  slice.rs  string.rs  struct.rs  symbol.rs  tmp.rs  vector.rs
src/core/scilisp/: usecase.slisp
src/lib/std/: number.sl
src/lib/std/string/: string.sl
src/parser/: ast.rs  error.rs  grammar.pest  green.rs  lexer.rs  pairs2ast.rs  parse2pairs.rs  span.rs  syntax.rs  token.rs
src/parser/ast/: dump.rs  visit.rs
src/rust/: .gitkeep
src/structures/: ast.rs  definitions.rs  errors.rs  green.rs  objects.rs  span.rs  token.rs  tokens.rs  types.rs
