#workspace = { members = ["src/core"] }
[package]
name = "sci-lisp-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
regex = "1.10.3"
wasmtime = "17.0.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
# features = [
#   "run-cargo-fmt",
#   "run-cargo-check",
#   "run-cargo-clippy",
#   "run-cargo-test",
#   "precommit-hook",
#   "prepush-hook",
#   "postmerge-hook",
# ]

[[bin]]
name = "scilisp"
path = "src/main.rs"

[profile.release]
lto = true
