[package]
name = "sci-lisp"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = ""
repository = "https://github.com/chaploud/sci-lisp"
documentation = ""
description = "A Lisp for Scientific Computation written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
id-arena = "2.2.1"
indexmap = "2.2.2"
ndarray = "0.15.6"
num = "0.4.1"
pest = "2.7.7"
pest_derive = "2.7.7"
regex = "1.10.3"
rustyline = "13.0.0"
rustyline-derive = "0.10.0"
wasmtime = "17.0.0"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
# features = [
#   "run-cargo-fmt",
#   "run-cargo-check",
#   "run-cargo-clippy",
#   "run-cargo-test",
#   "precommit-hook",
#   "prepush-hook",
#   "postmerge-hook",
# ]

[[bin]]
name = "sl"
path = "src/main.rs"

[profile.release]
lto = true
