[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
chrono = "0.4.33"
indexmap = "2.1.0"
num = "0.4.1"
regex = "1.10.3"

[lib]
name = "core"
path = "lib.rs"
crate-type = ["cdylib"]
